cmd/notif-middleware/k8s/06-traefik-vpn-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: notif-middleware-traefik-vpn-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: notif-middleware-traefik-vpn
    k8s.kuboard.cn/workload: notif-middleware-traefik-vpn
    kubernetes.io/ingress.class: "traefik-internet-vpn"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-strip-notif-middleware-prefix@kubernetescrd,
      kube-system-common-headers@kubernetescrd,
      kube-system-headers-appid-to-body@kubernetescrd,
      kube-system-headers-userid-to-body@kubernetescrd,
      kube-system-headers-app-login-token-to-body@kubernetescrd,
      kube-system-app-user-role-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/notifmw/v1/notif_CreateNotif
            backend:
              serviceName: notif-middleware
              servicePort: 50690
          - path: /api/notifmw/v1/notif_CreateNotifs
            backend:
              serviceName: notif-middleware
              servicePort: 50690
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
